feat: add api for reply
