# app/api/controller/v2/UserController.ts
@@ -5,9 +5,11 @@ import {
   HTTPMethod,
   HTTPMethodEnum,
   HTTPParam,
+  Middleware,
 } from '@eggjs/tegg';
 import { AbstractController } from '../AbstractController';
-import { filterUser } from '@/app/common/UserUtil';
+import { IsAdmin as IsAdminMiddleware } from '../../middleware/IsAdmin';
+import { pickUserField } from '@/app/common/UserUtil';
 
 @HTTPController({
   path: '/api/v2/user',
@@ -17,11 +19,20 @@ export class UserController extends AbstractController {
     method: HTTPMethodEnum.GET,
     path: '/:loginname',
   })
-  async show(@Context() ctx: EggContext, @HTTPParam() loginname: string) {
+  async read(@Context() ctx: EggContext, @HTTPParam() loginname: string) {
+    if (!loginname) {
+      ctx.throw('loginname is required', 422);
+    }
+
     const user = await this.userService.getByLoginName(loginname);
+
+    if (!user) {
+      ctx.throw('user is not existed', 400);
+    }
+
     ctx.body = {
       data: {
-        user: filterUser(user, [
+        user: pickUserField(user, [
           'score',
           'topic_count',
           'reply_count',
@@ -34,6 +45,33 @@ export class UserController extends AbstractController {
           'url',
           'weibo',
         ]),
+      },
+    };
+  }
+
+  @HTTPMethod({
+    method: HTTPMethodEnum.PUT,
+    path: '/:loginname/block',
+  })
+  @Middleware(IsAdminMiddleware)
+  async block(@Context() ctx: EggContext, @HTTPParam() loginname: string) {
+    if (!loginname) {
+      ctx.throw('loginname is required', 422);
+    }
+
+    const user = await this.userService.getByLoginName(loginname);
+
+    if (!user) {
+      ctx.throw('user is not existed', 400);
+    }
+
+    const result = await this.userService.update(user._id, {
+      is_block: true,
+    });
+
+    ctx.body = {
+      data: {
+        result,
       },
     };
   }
